# POS

./: .gitignore  .mcp.json  Análisis técnico del sistema Siesa POS y módulos PDV POS relacionados.md  CLAUDE.md  Errores.md  haz esto,, tal cual como lo dices con ospos, unice.md  pyproject.toml  requeriminetos_new.md  requirements.txt
.claude/: settings.json
.claude/agents/: arquitecto-pos.md  auditor-dian.md  refactor-deadcode.md
docs/: README-pos.md  analisis-requerimientos-cliente.md  ecc-plan.md  estado-actual-y-brechas.md  guia-visual-ui.md  plan-inicial-pos.md  ponytail-instalar.md  ponytail.md  pos-open-source-referencias.md  pos-siesa-funcional.md  scanner-pesa-serial-pendiente.md
scripts/: README.md  caja.py  clientes.py  generar_iconos_productos.py  leer_scanner.py  migrar.py
scripts/migraciones/: 001_inventario.sql  002_ventas.sql  003_consumidor_final.sql  004_devoluciones.sql  005_usuarios_descuento.sql  006_promociones.sql  007_caja_movimientos.sql  008_proveedores_compras.sql  009_cuentas.sql  010_gastos.sql  011_outbox.sql  012_catalogo_replica.sql  013_inventario_ubicaciones.sql  014_novedades_catalogo.sql  015_origen_nombre_movimientos.sql
src/: __init__.py
src/caja/: __init__.py  __main__.py  bootstrap.py  conteo.py  contexto.py  efectos.py  formato.py  marca.qss  pantalla_cierre.py  pantalla_clientes.py  pantalla_compras.py  pantalla_cuentas.py  pantalla_despiece.py  pantalla_devoluciones.py  pantalla_estilo.py  pantalla_gastos.py  pantalla_inventario.py  pantalla_proveedores.py  pantalla_reportes.py  (+6 more)
tests/: test_empaquetado_core.py
(+215 files in other folders)
