[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pos-core"
version = "0.1.0"
description = "Dominio compartido del POS (entidades, servicios, reglas puras) — pos-siesa-remake"
requires-python = ">=3.11"
dependencies = []          # core solo usa stdlib

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*"]        # empaqueta SOLO core y core.perifericos
